@@ -1,5 +1,10 @@
 Release history for multipass
 
+next
+  [Fixed]
+  - Compatibility with reparenting window managers has been improved.
+    multipass has been tested with katriawm, Openbox and i3.
+
 v17.03  2017-03-05
   - Initial release.
   - Broadcast key events to multiple windows.
